--- a/MoviesApp/MoviesApp.Core.csproj
+++ b/MoviesApp/MoviesApp.Core.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Converters\ReleaseDateValueConverter.cs" />
     <Compile Include="MVVMSetup\App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MovieDetailViewModel.cs" />
