--- a/MoviesApp.Droid/packages.config
+++ b/MoviesApp.Droid/packages.config
@@ -14,11 +14,12 @@
   <package id="MvvmCross.Plugin.Visibility" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Compat" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.UI" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Fragment" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v4" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
 </packages>
