--- a/MoviesApp.Droid/packages.config
+++ b/MoviesApp.Droid/packages.config
@@ -11,6 +11,7 @@
   <package id="MvvmCross.Droid.Support.Core.Utils" version="5.0.5" targetFramework="monoandroid71" />
   <package id="MvvmCross.Droid.Support.Fragment" version="5.0.5" targetFramework="monoandroid71" />
   <package id="MvvmCross.Droid.Support.V4" version="4.4.1" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Droid.Support.V7.AppCompat" version="5.0.5" targetFramework="monoandroid71" />
   <package id="MvvmCross.Platform" version="5.0.5" targetFramework="monoandroid71" />
   <package id="MvvmCross.Plugin.DownloadCache" version="5.0.5" targetFramework="monoandroid71" />
   <package id="MvvmCross.Plugin.File" version="5.0.5" targetFramework="monoandroid71" />
@@ -64,6 +65,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
@@ -71,5 +73,7 @@
   <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
 </packages>
