--- a/MoviesApp.Droid/MoviesApp.Droid.csproj
+++ b/MoviesApp.Droid/MoviesApp.Droid.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Bootstrap\DownloadCachePluginBootstrap.cs" />
     <Compile Include="Bootstrap\FilePluginBootstrap.cs" />
     <Compile Include="Bootstrap\VisibilityPluginBootstrap.cs" />
+    <Compile Include="SearchableConfiguration\MoviesSearchOnQueryTextListener.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
