--- a/MoviesApp/MoviesApp.Core.csproj
+++ b/MoviesApp/MoviesApp.Core.csproj
@@ -38,6 +38,7 @@
     <Compile Include="MVVMSetup\App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MovieDetailViewModel.cs" />
+    <Compile Include="ViewModels\MoviesSearchViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModelWrappers\MovieGroupWrapper.cs" />
