Integrate movies search list view with search service

--- a/MoviesApp/MoviesApp.Core.csproj
+++ b/MoviesApp/MoviesApp.Core.csproj
@@ -42,6 +42,7 @@
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModelWrappers\MovieGroupWrapper.cs" />
+    <Compile Include="ViewModelWrappers\MoviesSearchResultWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
