--- a/MoviesApp.Droid/MoviesApp.Droid.csproj
+++ b/MoviesApp.Droid/MoviesApp.Droid.csproj
@@ -201,6 +201,9 @@
     <AndroidResource Include="Resources\layout\movie_detail.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\movies_search_result.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\home.axml">
